--- a/index.html
+++ b/index.html
@@ -1,135 +1,56 @@
 <!doctype html>
-<html>
-<head>
+<html><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <style>
-  .jumbotron {
-    margin-bottom: 0;
-  }
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   
-  .carousel-inner > .item > img {
-	  margin: 0 auto;
-  }
-  
-  .affix {
-	  top: 0;
-	  width: 100%;
-	  z-index: 9999;
-  }
-  
-  footer {
-	  background-color: #eee;
-	  padding: 20px;
-  }
-  </style>
-  <title>Home</title>
+  <title>index</title>
+<link href="main.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+<body background="images/exotic-fruits.jpg">
 
-<div class="jumbotron">
-  <div class="container text-center">
-    <h1>Strawberry Mitten</h1>
-    <p>Online Store</p>
-  </div>
+<div class="jumbotron"><h1 align="center">Exotic Fruit</h1>
+  <h2 align="center"> Online Store</h2>
 </div>
 
-<!-- Navigation -->
+<div align="center">
+  <!-- Navigation -->
+</div>
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNav">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Strawberry Mitten</a>
+      <div align="center">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNav">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
     </div>
     <div class="collapse navbar-collapse" id="mainNav">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <!--<li><a href="#">Shirts</a></li>
+      <div align="center">
+        <ul class="nav navbar-nav">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="products.html">Products</a></li>
+          <<li><a href="about us.html">About Us</a></li>
+          <!--<li><a href="#">Shirts</a></li>
         <li><a href="#">Dresses</a></li>-->
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> My Account</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
-      </ul>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#"><span class="glyphicon glyphicon-user"></span> My Account</a></li>
+          <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+        </ul>
+        \
+      </div>
     </div>
   </div>
 </nav>
-<script>
-$(".navbar").affix({offset: {top: $(".jumbotron").outerHeight(true)}});
-</script>
-
-<!-- Page Contents -->
-<div class="container">
-  <!-- Featured product carousel -->
-  <h2>Featured Products</h2>
-  <div id="featureProd" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#featureProd" data-slide-to="0" class="active"></li>
-      <li data-target="#featureProd" data-slide-to="1"></li>
-      <li data-target="#featureProd" data-slide-to="2"></li>
-    </ol>
-    
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="http://placehold.it/400x550" alt="Image 1">
-        <div class="carousel-caption">
-          <h3>Product 1</h3>
-          <p>Only $1.99</p>
-        </div>
-      </div>
-      <div class="item">
-        <img src="http://placehold.it/400x550" alt="Image 2">
-        <div class="carousel-caption">
-          <h3>Product 2</h3>
-          <p>On sale, $2.99</p>
-        </div>
-      </div>
-      <div class="item">
-        <img src="http://placehold.it/400x550" alt="Image 3">
-        <div class="carousel-caption">
-          <h3>Sale!</h3>
-          <p>Limited time! Until 4/26/2016</p>
-        </div>
-      </div>
-    </div>
-    
-    <a class="left carousel-control" href="#featureProd" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#featureProd" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div><br>
-  
-  <!-- Category description boxes -->
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="panel panel-primary">
-        <div class="panel-heading">Fruits</div>
-        <div class="panel-body"><img src="http://placehold.it/500x250" class="img-responsive" style="width: 100%" alt="Dresses"></div>
-        <div class="panel-footer">Choose fruits from all over the world!</div>
-      </div>
-    </div>
-    <div class="col-sm-6">
-      <div class="panel panel-primary">
-        <div class="panel-heading">More Fruits</div>
-        <div class="panel-body"><img src="http://placehold.it/500x250" class="img-responsive" style="width: 100%" alt="Dresses"></div>
-        <div class="panel-footer">Did we mention we sell fruits?</div>
-      </div>
-    </div>
+<div align="center"> 
   </div>
-</div>
+  
+  <img src="images/strawberries.png" width="537" height="373"></div>
 
 <!-- Page Footer -->
 <footer class="container-fluid text-center">
